--- a/luci-app-singbox-ui/Makefile
+++ b/luci-app-singbox-ui/Makefile
@@ -5,7 +5,7 @@ PKG_VERSION:=1.2.1
 PKG_RELEASE:=13
 
 LUCI_TITLE:=LuCI singbox-ui app
-LUCI_DEPENDS:=+luci-base +sing-box +nano +curl +jq
+LUCI_DEPENDS:=+luci-base +sing-box +curl +jq
 LUCI_PKGARCH:=all
 LUCI_LANG.ru:=Русский (Russian)
 LUCI_LANG.en:=English
@@ -16,10 +16,34 @@ PKG_MAINTAINER:=ang3el <ang3el7z@gmail.com>
 LUCI_LANGUAGES:=en ru
 
 define Package/$(PKG_NAME)/install
-	$(CP) ./root/* $(1)/
-	chmod 0755 $(1)/etc/init.d/singbox-ui-autoupdater
-	chmod 0755 $(1)/usr/bin/singbox-ui/singbox-ui-updater
-	chmod 0755 $(1)/usr/bin/singbox-ui/singbox-ui-autoupdater-wrapper
+	# etc | Optional defaults config
+	$(INSTALL_DIR) $(1)/etc/config
+	$(INSTALL_BIN) ./root/etc/config/* $(1)/etc/config/
+
+	# etc | Init script (singbox-ui-autoupdater)
+	$(INSTALL_DIR) $(1)/etc/init.d
+	$(INSTALL_BIN) ./root/etc/init.d/singbox-ui-autoupdater $(1)/etc/init.d/
+
+	# etc | Need defaults (config files)
+	$(INSTALL_DIR) $(1)/etc/sing-box
+	$(INSTALL_BIN) ./root/etc/sing-box/* $(1)/etc/sing-box/
+
+	# etc | Optional defaults
+	$(INSTALL_DIR) $(1)/etc/uci-defaults
+	$(INSTALL_BIN) ./root/etc/uci-defaults/* $(1)/etc/uci-defaults/
+
+	# User binaries (Updater, Health)
+	$(INSTALL_DIR) $(1)/usr/bin/singbox-ui
+	$(INSTALL_BIN) ./root/usr/bin/singbox-ui/* $(1)/usr/bin/singbox-ui/
+
+
+	# usr | LuCI menu
+	$(INSTALL_DIR) $(1)/usr/share/luci/menu.d
+	$(INSTALL_DATA) ./root/usr/share/luci/menu.d/* $(1)/usr/share/luci/menu.d/
+
+	# usr | LuCI acl
+	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
+	$(INSTALL_DATA) ./root/usr/share/rpcd/acl.d/* $(1)/usr/share/rpcd/acl.d/
 endef
 
 include $(TOPDIR)/feeds/luci/luci.mk
