--- a/luci-app-singbox-ui/Makefile
+++ b/luci-app-singbox-ui/Makefile
@@ -1,7 +1,9 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-singbox-ui
-PKG_VERSION:=1.1.5
+
+#install version in pipline
+PKG_VERSION:=1.0.0
 PKG_RELEASE:=1
 
 LUCI_TITLE:=LuCI singbox-ui app
