--- a/.github/workflows/singbox-ui-build.yml
+++ b/.github/workflows/singbox-ui-build.yml
@@ -1,4 +1,6 @@
-name: Build packages
+# .github/workflows/singbox-ui-build.yml
+name: Build luci-app-singbox-ui
+
 on:
   push:
     tags:
@@ -6,51 +8,43 @@ on:
 
 jobs:
   build:
-    name: Build luci-app-singbox-ui
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4.2.1
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Check version match
         run: |
-          LUCI_APP_SINGBOX_UI_VERSION=$(grep '^PKG_VERSION:=' luci-app-singbox-ui/Makefile | cut -d '=' -f 2)
-
+          LUCI_APP_SINGBOX_UI_VERSION=$(grep '^PKG_VERSION:=' luci-app-singbox-ui/Makefile | cut -d '=' -f2 | tr -d ' ')
           TAG_VERSION=${GITHUB_REF#refs/tags/v}
 
           echo "Luci-app-singbox-ui version: $LUCI_APP_SINGBOX_UI_VERSION"
           echo "Tag version: $TAG_VERSION"
 
           if [ "$LUCI_APP_SINGBOX_UI_VERSION" != "$TAG_VERSION" ]; then
-            echo "Error: Version mismatch"
+            echo "❌ Version mismatch"
             exit 1
           fi
 
       - name: Build Docker image
-        uses: docker/build-push-action@v6.9.0
+        uses: docker/build-push-action@v6
         with:
           context: .
           tags: singbox-ui:ci
 
-      - name: Create Docker container
-        run: docker create --name singbox-ui singbox-ui:ci
-
-      - name: Copy file from Docker container
+      - name: Create container and extract IPKs
         run: |
-          docker cp singbox-ui:/builder/bin/packages/x86_64/base/. ./bin/
+          docker create --name singbox-ui singbox-ui:ci
           docker cp singbox-ui:/builder/bin/packages/x86_64/luci/. ./bin/
+          docker rm singbox-ui
 
-      - name: Filter IPK files
+      - name: Filter output
         run: |
-          # Извлекаем версию из тега, убирая префикс 'v'
-          # VERSION=${GITHUB_REF#refs/tags/v}
-          
           mkdir -p ./filtered-bin
           cp ./bin/luci-app-singbox-ui*.ipk ./filtered-bin/luci-app-singbox-ui.ipk
 
-      - name: Remove Docker container
-        run: docker rm singbox-ui
-
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2.0.8
+        uses: softprops/action-gh-release@v2
         with:
           files: ./filtered-bin/*.ipk
