--- a/.github/workflows/singbox-ui-build.yml
+++ b/.github/workflows/singbox-ui-build.yml
@@ -90,7 +90,7 @@ jobs:
           else
             echo "📤 Committing updated Makefile..."
             git add luci-app-singbox-ui/Makefile
-            git commit -m "chore: sync Makefile version with tag v${TAG_VERSION}"
+            git commit -m "workflows edit: sync Makefile version with tag v${TAG_VERSION}"
             git push origin HEAD:main
           fi
         env:
