--- a/luci-app-singbox-ui/Makefile
+++ b/luci-app-singbox-ui/Makefile
@@ -1,9 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-singbox-ui
-
 PKG_VERSION:=1.4.1
-
 PKG_RELEASE:=1
 
 LUCI_TITLE:=LuCI singbox-ui app
@@ -13,8 +11,9 @@ LUCI_LANG.ru:=Русский (Russian)
 LUCI_LANG.en:=English
 
 PKG_LICENSE:=GPL-2.0-or-later
-PKG_MAINTAINER:=ang3el
-
+PKG_MAINTAINER:=Ang3el <singboxui@ang3el.world>
 LUCI_LANGUAGES:=en ru
 
 include $(TOPDIR)/feeds/luci/luci.mk
+
+# call BuildPackage - OpenWrt buildroot signature
