--- a/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
+++ b/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
@@ -1,42 +1,77 @@
-name: Build luci-app-singbox-ui from tag
+name: Build luci-app-singbox-ui from tag v2
+
 on:
   push:
     tags:
-      - v*
+      - 'v*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4.2.1
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Check version and optionally fix mismatch
+        run: |
+          set -e
+
+          LUCI_APP_SINGBOX_UI_VERSION=$(grep '^PKG_VERSION:=' luci-app-singbox-ui/Makefile | cut -d '=' -f2 | tr -d ' ')
+          TAG_VERSION=${GITHUB_REF#refs/tags/v}
+
+          echo "📦 Makefile version: $LUCI_APP_SINGBOX_UI_VERSION"
+          echo "🏷  Git tag version: $TAG_VERSION"
+
+          if [ "$LUCI_APP_SINGBOX_UI_VERSION" != "$TAG_VERSION" ]; then
+            echo "❌ Version mismatch detected!"
+            echo "⏳ Waiting 30 seconds to allow for manual cancellation..."
+            sleep 30
+
+            echo "🔁 Updating Makefile version to match tag..."
+            sed -i "s/^PKG_VERSION:=.*$/PKG_VERSION:=${TAG_VERSION}/" luci-app-singbox-ui/Makefile
+
+            echo "✅ Makefile updated."
+          else
+            echo "✅ Version match confirmed."
+          fi
+
+      - name: Commit updated Makefile version (if changed)
+        run: |
+          TAG_VERSION=${GITHUB_REF#refs/tags/v}
+
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+          if git diff --quiet; then
+            echo "ℹ No changes to commit."
+          else
+            echo "📤 Committing updated Makefile..."
+            git add luci-app-singbox-ui/Makefile
+            git commit -m "chore: sync Makefile version with tag v${TAG_VERSION}"
+            git push origin HEAD:$GITHUB_REF_NAME
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        uses: docker/build-push-action@v6.9.0
+        uses: docker/build-push-action@v6
         with:
           context: .
-          tags: luci-app-singbox-ui:ci
-          build-args: |
-            BUILDKIT_INLINE_CACHE=1
-          network: host  # Важно, если feeds у OpenWrt глючат
+          tags: singbox-ui:ci
 
-      - name: Create container
-        run: docker create --name luci-builder luci-app-singbox-ui:ci
-
-      - name: Copy .ipk files from container
+      - name: Create container and extract IPKs
         run: |
-          mkdir -p ./bin
-          docker cp luci-builder:/builder/bin ./bin
+          docker create --name singbox-ui singbox-ui:ci
+          docker cp singbox-ui:/builder/bin/packages/x86_64/luci/. ./bin/
+          docker rm singbox-ui
 
-      - name: Filter luci-app-singbox-ui IPK
+      - name: Filter output
         run: |
           mkdir -p ./filtered-bin
-          find ./bin -name 'luci-app-singbox-ui_*.ipk' -exec cp {} ./filtered-bin/luci-app-singbox-ui.ipk \;
-
-      - name: Remove container
-        run: docker rm luci-builder
+          cp ./bin/luci-app-singbox-ui*.ipk ./filtered-bin/luci-app-singbox-ui.ipk
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: ./filtered-bin/luci-app-singbox-ui.ipk
+          files: ./filtered-bin/*.ipk
